@@ -14,6 +14,7 @@ v0.09
 	* ADD : nice landuse selector for roads (areas)
 	* ADD : more amenities (by Matt Williams)
 	* ADD : ability to easily draw an area
+	* ADD : landuse selector for relations
 
 v0.08
 	* FIX : work with 0.5 API
